--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,39 +13,30 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4  
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.2" 
-
-      - name: Install Dependencies
-        run: |
-          cd server  # Navigate to the server folder
-          composer install --no-dev --optimize-autoloader  # Install dependencies
-
       - name: Deploy to technotrends.globalctg1.com
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_IP }}  
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.CPANEL_SSH_KEY }}  # 🔥 Use the private SSH key
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}  #line to decrypt the key          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Decrypt the key if needed
           script: |
+            # Go to the project directory
             cd /home/globalct/technotrends.globalctg1.com
 
+            # Reset any local changes, clean up, and pull the latest changes
             git reset --hard  
             git clean -fd  
             git pull origin main  
 
-            # Rsync only contents of 'server' directory
+            # Rsync only the contents of the 'server' directory
             rsync -av --delete --exclude='.env' --exclude='.htaccess' $GITHUB_WORKSPACE/server/ /home/globalct/technotrends.globalctg1.com/
 
-            cd /home/globalct/technotrends.globalctg1.com
-            composer install --no-dev --optimize-autoloader
+            # Optional: If Composer or artisan are needed to be run manually on the server, run those commands here
+            # composer install --no-dev --optimize-autoloader
 
-            php artisan config:clear
-            php artisan cache:clear
-            php artisan view:clear
-            php artisan route:clear
-
-            sudo systemctl restart apache2 || sudo systemctl restart nginx
+            # Optional: Clear Laravel cache and config (if needed)
+            # php artisan config:clear
+            # php artisan cache:clear
+            # php artisan view:clear
+            # php artisan route:clear
