--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,25 +18,11 @@ jobs:
         with:
           host: ${{ secrets.SERVER_IP }}  
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.CPANEL_SSH_KEY }}  # 🔥 Use the private SSH key
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}  # Decrypt the key if needed
+          key: ${{ secrets.CPANEL_SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            # Go to the project directory
+            # Navigate to the project directory
             cd /home/globalct/technotrends.globalctg1.com
 
-            # Reset any local changes, clean up, and pull the latest changes
-            git reset --hard  
-            git clean -fd  
-            git pull origin main  
-
-            # Rsync only the contents of the 'server' directory
-            scp -r $GITHUB_WORKSPACE/server/* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/home/globalct/technotrends.globalctg1.com/
-
-            # Optional: If Composer or artisan are needed to be run manually on the server, run those commands here
-            # composer install --no-dev --optimize-autoloader
-
-            # Optional: Clear Laravel cache and config (if needed)
-            # php artisan config:clear
-            # php artisan cache:clear
-            # php artisan view:clear
-            # php artisan route:clear
+            # Pull the latest changes from the repository
+            git pull origin main
