--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,14 @@ jobs:
             # Navigate to the project directory
             cd /home/globalct/technotrends.globalctg1.com
 
+            # Stash any untracked changes
+            git stash -u
+
             # Clean untracked files to avoid conflicts
             git clean -fd
 
             # Pull the latest changes from the repository
             git pull origin main
+
+            # Apply the stashed changes (optional)
+            git stash pop
