--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+name: Deploy Server
+
 on:
   push:
     branches:
@@ -26,14 +28,5 @@ jobs:
             # Navigate to the project directory
             cd /home/globalct/technotrends.globalctg1.com
 
-            # Stash any untracked changes
-            git stash -u
-
-            # Clean untracked files to avoid conflicts
-            git clean -fd
-
             # Pull the latest changes from the repository
             git pull origin main
-
-            # Apply the stashed changes (optional)
-            git stash pop
