--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4  
 
-      - name: Deploy to technotrends.globalctg1.com
+      - name: Deploy to technotrends.xoftics.com
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_IP }}  
@@ -26,7 +26,7 @@ jobs:
             ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
             # Navigate to the project directory
-            cd /home/globalct/technotrends.globalctg1.com
+            cd /home/xoftkfnz/technotrends.xoftics.com
 
             # Pull the latest changes from the repository
             git pull origin main
